# lightning-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  discord-post.md  pyproject.toml
.claude/: hookify.use-architect.local.md  settings.json
.claude/agents/aimug_researcher/: AGENT.md
.claude/agents/architect/: AGENT.md
.claude/agents/basic_helper/: AGENT.md
.claude/agents/dead_code_cleaner/: AGENT.md
.claude/agents/git_commit_writer/: AGENT.md
.claude/agents/lab_finder/: AGENT.md
.claude/agents/markdown_formatter/: AGENT.md
.claude/agents/paper_researcher/: AGENT.md
.claude/agents/pep8_checker/: AGENT.md
.claude/agents/presentation_slide_writer/: AGENT.md
.claude/agents/python_doc_writer/: AGENT.md
.claude/agents/research_assistant/: AGENT.md
.claude/agents/slides_checker/: AGENT.md
.claude/agents/slides_quality_loop/: AGENT.md
.claude/agents/tool_architect/: AGENT.md
.claude/agents/tool_implementer/: AGENT.md
.claude/skills/agent-design/: SKILL.md
.claude/skills/dead-code-detection/: SKILL.md
.claude/tools/: presentation.py
db/: README.md  agents.json  skills.json  tools.json
docs/: SUBAGENT_REFACTOR_PLAN.md
docs/research/: langgraph-deep-agents-comparison.md  middleware-hooks-agent-orchestration.md
presentation/: __init__.py  generate_slides.py  slide_content.py  styles.py
presentation/output/: lightning-agents.pptx
scripts/: migrate_agents_to_filesystem.py
src/lightning_agents/: __init__.py  agent_factory.py  agent_logger.py  agent_parser.py  agents.json  cli.py  mcp_config.py  registry.py  runner.py
(+29 files in other folders)
